--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -3,11 +3,17 @@ nav
     position: static
     background-color: #fff
     width: -webkit-fill-available
-    display: flex
-    flex-direction: row
-    align-items: center
     padding: 10px 20px
     box-shadow: -1px -1px 7px #ddd
+    main 
+        display: flex
+        flex-direction: row
+        align-items: center
+        justify-content: flex-start
+        max-width: 900px
+        height: 40px
+        padding: 0
+        margin: 0
     ul
         display: flex
         flex-direction: row
