--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -4,12 +4,13 @@ nav
     background-color: #fff
     width: -webkit-fill-available
     padding: 10px 20px
-    box-shadow: -1px -1px 7px #ddd
-    main 
+    box-shadow: 1px 2px 18px rgb(0 0 0 / 10%)
+    main
         display: flex
         flex-direction: row
         align-items: center
-        justify-content: flex-start
+        justify-content: flex-start 
+        justify-content: space-between
         max-width: 900px
         height: 40px
         padding: 0
@@ -40,7 +41,7 @@ a
         margin: 10px
         border: 1px solid #ddd
         border-radius: 10px
-        box-shadow: -1px -1px 7px #ddd
+        box-shadow: 1px 2px 18px rgb(0 0 0 / 10%)
         img
             border-radius: 10px
         p
