--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -1,5 +1,9 @@
+html
+    a
+        color: #0070f3
+        text-decoration: none
 nav
-    height: 60px
+    height: 80px
     position: static
     background-color: #fff
     width: -webkit-fill-available
@@ -9,12 +13,12 @@ nav
         display: flex
         flex-direction: row
         align-items: center
-        justify-content: flex-start 
+        padding: 0 1.5rem
+        height: 55px
+        max-width: 800px
+        margin: auto
         justify-content: space-between
-        max-width: 900px
-        height: 40px
-        padding: 0
-        margin: 0
+        transition: height .3s ease
     ul
         display: flex
         flex-direction: row
@@ -24,32 +28,40 @@ nav
             margin: 10px
 main
     margin-top: 10px
-
-a
-    color: #0070f3
-    text-decoration: none
-.cards
-    display: flex
-    flex-direction: row
-    flex-wrap: wrap
-    justify-content: center
-    .card
+    .cards
         display: flex
-        flex-direction: column
-        justify-content: space-between
-        width: 300px
-        margin: 10px
-        border: 1px solid #ddd
-        border-radius: 10px
-        box-shadow: 1px 2px 18px rgb(0 0 0 / 10%)
-        img
+        flex-direction: row
+        flex-wrap: wrap
+        justify-content: center
+        .card
+            display: flex
+            flex-direction: column
+            justify-content: space-between
+            width: 300px
+            margin: 10px
+            border: 1px solid #ddd
             border-radius: 10px
-        p
-            padding: 10px
-            padding-bottom: 0
-            margin: 0
-        small
-            padding: 10px
+            box-shadow: 1px 2px 18px rgb(0 0 0 / 10%)
+            img
+                border-radius: 10px
+            p
+                padding: 10px
+                padding-bottom: 0
+                margin: 0
+            small
+                padding: 10px
 article
     max-width: 700px
     margin: 0 auto
+    code
+        background-color: #dde
+        padding: 10px
+        border-radius: 10px
+        // display: flex
+        // width: -webkit-fill-available
+footer
+    display: flex
+    height: 150px
+    border-top: 1px dashed #03a9f4
+    align-items: center
+    justify-content: center
