--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -3,31 +3,30 @@ html
         color: #0070f3
         text-decoration: none
 nav
-    height: 80px
-    position: static
+    top: 0
+    position: fixed
     background-color: #fff
     width: -webkit-fill-available
     padding: 10px 20px
     box-shadow: 1px 2px 18px rgb(0 0 0 / 10%)
-    main
-        display: flex
-        flex-direction: row
-        align-items: center
+    header
         padding: 0 1.5rem
-        height: 55px
         max-width: 800px
         margin: auto
-        justify-content: space-between
-        transition: height .3s ease
+        transition: height 0.3s ease
+        align-items: center
     ul
         display: flex
         flex-direction: row
         align-items: center
         list-style-type: none
+        padding: 0
+        margin: 0
+        justify-content: center
         li
             margin: 10px
 main
-    margin-top: 10px
+    margin-top: 120px
     .cards
         display: flex
         flex-direction: row
@@ -53,6 +52,7 @@ main
 article
     max-width: 700px
     margin: 0 auto
+    padding: 10px
     code
         background-color: #dde
         padding: 10px
@@ -65,3 +65,13 @@ footer
     border-top: 1px dashed #03a9f4
     align-items: center
     justify-content: center
+
+@media only screen and  (max-width: 500px  )
+    header
+        display: flex
+        flex-direction: column
+@media only screen and  (min-width: 500px  )
+    header
+        display: flex
+        flex-direction: row 
+        justify-content: space-between
