--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -53,12 +53,13 @@ article
     max-width: 700px
     margin: 0 auto
     padding: 10px
+    em code
+        padding: 10px
     code
         background-color: #dde
-        padding: 10px
+        padding: 5px
         border-radius: 10px
-        // display: flex
-        // width: -webkit-fill-available
+        font-size: small
 footer
     display: flex
     height: 150px
@@ -73,5 +74,5 @@ footer
 @media only screen and  (min-width: 500px  )
     header
         display: flex
-        flex-direction: row 
+        flex-direction: row
         justify-content: space-between
