--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -63,9 +63,9 @@ article
         font-size: small
 footer
     display: flex
-    height: max-content
-    align-items: center
-    justify-content: space-around
+    height: max-content 
+    align-items: flex-start;
+    justify-content: space-around 
     padding-top: 20px
     box-shadow: -1px -2px 18px rgb(0 0 0 / 10%)
     a
