--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -32,6 +32,11 @@ main
         flex-direction: row
         flex-wrap: wrap
         justify-content: center
+        h2
+            width: 100%
+            margin: 10px 30px
+            text-align: center
+
         .card
             display: flex
             flex-direction: column
@@ -44,6 +49,7 @@ main
             box-shadow: 1px 2px 18px rgb(0 0 0 / 10%)
             img
                 border-radius: 10px
+                height: 100%
             p
                 padding: 10px
                 padding-bottom: 0
@@ -79,3 +85,10 @@ footer
         display: flex
         flex-direction: row
         justify-content: space-between
+
+.btn
+    border-radius: 10px
+    background-color: #0070f3
+    color: #fff
+    padding: 10px
+    margin: 10px
