--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,9 +16,9 @@ body {
   box-sizing: border-box;
 }
 
-img {
+/* img {
   max-width: 100%;
   display: block;
   width: 100%;
-  height: 100%;
-}
+  height: 100%; */
+/* } */
