up date hero style

--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -36,7 +36,6 @@ main
             width: 100%
             margin: 10px 30px
             text-align: center
-
         .card
             display: flex
             flex-direction: column
@@ -92,3 +91,4 @@ footer
     color: #fff
     padding: 10px
     margin: 10px
+    width: max-content
