--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -66,6 +66,10 @@ article
         padding: 5px
         border-radius: 10px
         font-size: small
+    img
+        width: -webkit-fill-available
+        height: max-content
+
 footer
     display: flex
     height: max-content
