--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -45,6 +45,10 @@ nav
             margin: 10px
 main
     margin-top: 120px
+    .hero
+        background-image: linear-gradient(360deg, #eeeeee, #c7e1ff, #eeeeee )
+        h1
+            font-size: 3rem
     .cards
         display: flex
         flex-direction: row
@@ -62,6 +66,7 @@ main
             height: max-content
             margin: 10px
             border: 1px solid #ddd
+            background-color: #fff
             border-radius: 10px
             box-shadow: 1px 2px 18px rgb(0 0 0 / 10%)
             img
@@ -128,3 +133,8 @@ footer
     padding: 10px
     margin: 10px
     width: max-content
+    background-image: linear-gradient(to right, #03a9f4, #5b5ef3)
+.text-Ui
+    color: transparent
+    background-image: linear-gradient(to right,#03a9f4,#5b5ef3)
+    -webkit-background-clip: text
