--- a/src/styles/theme@v2.sass
+++ b/src/styles/theme@v2.sass
@@ -3,7 +3,7 @@
  theme: light
  author: "Qotayba mohammad"
  description: "ui kit for the website"
- version: "2.0.0"
+ version: "2.1.0"
  homepage: "https://qotayba.top/ktyle/"
  license: "MIT"
  repository: "https://github.com/ktsyr1/ktyle"
@@ -42,58 +42,64 @@
                     #{$key}-top: #{$n1 }rem
                     #{$key}-bottom: #{$n1 }rem
 
-@mixin responsive($tag,$min,$max)
-    @media (min-width: $min) and (max-width: $max)
-        @include Sizes($tag , p, padding )
-        @include Sizes($tag , m, margin )
-        @include Sizes($tag , w, width )
-        @include Sizes($tag , h, height )
-        @include Sizes($tag , top, top )
-        @include Sizes($tag , right, right )
-        @include Sizes($tag , bottom, bottom )
-        @include Sizes($tag , left, left )
-        .#{$tag}Box
-            padding: 5px 10px
-        .#{$tag}box ,.#{$tag}Box
-            display: flex
-        .#{$tag}space
-            justify-content: space-between
-        .#{$tag}col
-            flex-direction: column !important
-        .#{$tag}row
-            flex-direction: row
-        .#{$tag}grid
-            flex-wrap: wrap
-        .#{$tag}left
-            justify-content: flex-start
-            flex-direction: row
-            width: 100%
-        .#{$tag}j
-            justify-content: center
-            &-end
-                justify-content: flex-end
-            &-start
-                justify-content: flex-start
-        .#{$tag}aitem
-            align-items: center
-        .#{$tag}scroll
-            overflow: auto
-        .#{$tag}none
-            display: none
-        .#{$tag}pup
-            position: fixed
-        .#{$tag}f
-            &-sm
-                font-size: small
-            &-md
-                font-size: medium
-            &-lg
-                font-size: larger
-            &-xl
-                font-size: x-large
-            &-xxl
-                font-size: xx-large
+@mixin fullContent($tag )
 
+    @include Sizes($tag , p, padding )
+    @include Sizes($tag , m, margin )
+    @include Sizes($tag , w, width )
+    @include Sizes($tag , h, height )
+    @include Sizes($tag , top, top )
+    @include Sizes($tag , right, right )
+    @include Sizes($tag , bottom, bottom )
+    @include Sizes($tag , left, left )
+    .#{$tag}Box
+        padding: 5px 10px
+    .#{$tag}box ,.#{$tag}Box
+        display: flex
+    .#{$tag}space
+        justify-content: space-between
+    .#{$tag}col
+        flex-direction: column !important
+    .#{$tag}row
+        flex-direction: row
+    .#{$tag}grid
+        flex-wrap: wrap
+    .#{$tag}left
+        justify-content: flex-start
+        flex-direction: row
+        width: 100%
+    .#{$tag}j
+        justify-content: center
+        &-end
+            justify-content: flex-end
+        &-start
+            justify-content: flex-start
+    .#{$tag}aitem
+        align-items: center
+    .#{$tag}scroll
+        overflow: auto
+    .#{$tag}none
+        display: none
+    .#{$tag}pup
+        position: fixed
+    .#{$tag}f
+        &-sm
+            font-size: small
+        &-md
+            font-size: medium
+        &-lg
+            font-size: larger
+        &-xl
+            font-size: x-large
+        &-xxl
+            font-size: xx-large
+
+@mixin responsive($tags,$min,$max)
+    @if $tags == ''
+        @include  fullContent($tags )
+    @else   
+        @media (min-width: $min) and (max-width: $max)
+            @include fullContent($tags ) 
 @include responsive('',0,999999px)
 @include responsive('sm-',0px ,576px)
 @include responsive('md-',576px ,768px)
