--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -177,3 +177,7 @@ footer
     color: transparent
     background-image: var(--color-lg-ui)
     -webkit-background-clip: text
+svg
+    fill: var(--color-ui)
+    padding: 5px
+    width: 32px
