--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -7,7 +7,7 @@
     --sh: 1px 2px 18px rgb(0 0 0 / 10%)
 html
     a
-        color: #0070f3
+        color: var(--color-ui)
         text-decoration: none
     body
         padding: 0
@@ -181,3 +181,10 @@ svg
     fill: var(--color-ui)
     padding: 5px
     width: 32px
+.icon-home
+
+    svg
+        width: 50px
+        height: 50px
+        path
+            stroke: var(--color-ui)
