--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -106,15 +106,14 @@ article
         height: max-content
 
 footer
-    display: flex
     box-shadow: var(--sh)
-    background-image: linear-gradient(90deg, var(--color-ui), var(--color-uix))
-    color: var(--color)
+    /* background-image: linear-gradient(90deg,#ffffff,#ededed); */
+    background-color: var(--color)
+    color: #03a9f4
     padding-top: 20px
     height: max-content
-    margin: 10px
     border-radius: 10px
-    flex-direction: column
+    margin-top: 40px
     .list
         display: flex
         flex-direction: column
@@ -125,12 +124,14 @@ footer
             margin-bottom: 20px
     .logo
         display: flex
-        flex-direction: column
-        align-items: flex-start
+        flex-direction: row
+        align-items: center
         width: 300px
         background-color: var(--color)
         border-radius: 10px
-        margin: 10px
+        margin: 10px auto
+        margin-top: -50px
+        box-shadow: var(--sh)
         &-text
             font-size: xxx-large
             justify-content: center
@@ -151,12 +152,9 @@ footer
         padding: 10px
         text-align: center
         margin: 10px
-        box-shadow: var(--sh)
         border-radius: 10px
-        border: 3px solid var(--color)
-
     a
-        color: var(--color)
+        color: var(--color-ui)
         padding: 5px 0
 @media only screen and  (max-width: 500px  )
     header
@@ -198,7 +196,7 @@ svg
     display: flex
     margin: auto
     border-radius: 10px
-    padding: 0 10px 
+    padding: 0 10px
     align-items: center
     input
         border: 0
