--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -112,8 +112,7 @@ footer
     color: #03a9f4
     padding-top: 20px
     height: max-content
-    border-radius: 10px
-    margin-top: 40px
+    margin: 40px 0 0 0
     .list
         display: flex
         flex-direction: column
